# Robot-Control-OpenSim

./: .gitignore  .gitmodules  CMakeLists.txt  InvDyn.m  README.md  curve_interpolation.cpp  curve_interpolation.h  data_io.cpp  data_io.h  data_io_interface.h  data_logging.cpp  data_logging.h  emg_optimizer-nn.cpp  emg_optimizer-nn.h  emg_optimizer-osim.cpp  emg_optimizer-osim.h  emg_optimizer.h  emg_optimizer_system.cpp  emg_optimizer_system.h  emg_processing.c  emg_processing.h  generator.py  main.cpp  modules.h  multi_layer_perceptron.cpp  multi_layer_perceptron.h  namespaces.h  neural_network.cpp  neural_network.h  nms_processor-base.cpp  nms_processor-base.h  nms_processor-nn.cpp  nms_processor-nn.h  nms_processor-osim.cpp  nms_processor-osim.h  open_sim_model-legacy.cpp  open_sim_model-legacy_ik.cpp  open_sim_model.cpp  open_sim_model_builder.py  open_sim_nn-legacy.cpp  (+14 more)
OpenSim-Win32/: OpenSim-Win32.sln  OpenSim-Win32.vcxproj  OpenSim-Win32.vcxproj.filters
